<resources>
    <string name="app_name">MovieDB</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="posterDefaultName">Unknown film</string>
    <string name="posterDefaultReit">0.0</string>
    <string name="posterDefaultType">Unknown Type</string>
    <string name="posterDefaultYear">1970</string>
    <string name="posterDefaultImageDesc">Poster Image</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="sort">Sort</string>
    <string name="by_rating">by rating</string>
    <string name="by_popularity">by popularity</string>
    <string name="title_activity_film_details">FilmDetails</string>
    <string name="filmDefaultOverview">filmOverview</string>
    <string name="film_details_share">filmDetailsShare</string>
    <string name="title_activity_detailed">DetailedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="hello_world">Hello world!</string>
    <string name="player_error">Error initializing YouTube player</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="Header">Kaganovskyi Production</string>
    <string name="Subheader">Menu</string>
    <string name="AppImage">AppImage</string>
    <string name="favorites_share">favoritesShare</string>
    <string name="favorites_action_settings">favSettings</string>
    <string name="info">No information available</string>
    <string name="movie_db">Application</string>
    <string name="search_film">FilmSearch</string>

</resources>
