<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">


    <item
        android:id="@+id/menu_sort"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/sort"
        app:showAsAction="always">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/sort_by_reit"
                    android:title="@string/by_rating"
                    android:checked="true"/>

                <item
                    android:id="@+id/sort_by_popularity"
                    android:title="@string/by_popularity"/>

            </group>


        </menu>


    </item>

    <item
        android:id="@+id/menu_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <!--<item-->
        <!--android:id="@+id/menu_share"-->
        <!--android:icon="@android:drawable/ic_menu_share"-->
        <!--android:title="@string/share"-->
        <!--app:showAsAction="always"/>-->


</menu>
