<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">



<LinearLayout
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/detailedFilmPoster"
        android:contentDescription="@string/posterDefaultImageDesc"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/detailedContainer">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/posterDefaulName"
            android:id="@+id/detailedFilmName"
            android:textColor="#1e2ee1"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/posterDefaultReit"
            android:id="@+id/detailedFilmRate"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/posterDefaultType"
            android:id="@+id/detailedFilmType"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/posterDefaultYear"
            android:id="@+id/detailedFilmYear"
            android:textSize="12sp"/>
    </LinearLayout>

</LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filmDefaultOverview"
        android:id="@+id/filmOverview"/>

</LinearLayout>